# SB_django_lessons

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: demo.py  requirements.txt  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: articles_random_create.py  create_author.py  create_category.py  tags_create.py
mysite/blogapp/migrations/: 0001_initial.py  0002_article.py  0003_newarticle.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html  (+2 more)
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  models.py  urls.py  views.py
mysite/requestdataapp/migrations/: 0001_initial.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixtures.json  orders-fixtures.json  products-fixtures.json  users-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_product_discount.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_alter_order_options_alter_product_options_and_more.py
(+38 files in other folders)
