[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Elmir Zinattullin <dd2011ld@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"
drf-spectacular = "^0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
